Convert text cards into readable Sections that span page (BUG)

--- a/src/components/about/stylesheet/about.css
+++ b/src/components/about/stylesheet/about.css
@@ -13,6 +13,7 @@
     padding-bottom: 25px;
 }
 
+
 #about {
     border-radius: 10px;
     background-color: var(--blackfade);
@@ -24,4 +25,11 @@
     margin-right: 10%;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+@media (max-width:800px){
+    #about{
+        margin-left: 0%;
+        margin-right: 0%;
+    }
 }
