--- a/src/components/stylesheet/app.css
+++ b/src/components/stylesheet/app.css
@@ -53,6 +53,11 @@ body::before {
   background:  rgba(138, 138, 138, 0.3);
   height: 100%;
 }
+@media(max-width:800px){
+  .page-content{
+    width:100%;
+;  }
+}
 
 .section-title {
   letter-spacing: 10px;
